# Know-you-specimen

./: .dockerignore  .env  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  pyproject.toml  pytest.ini
.zed/: settings.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: ImageUploader.vue  MetricsTable.vue  ResultDisplay.vue
src/know_your_specimen/: config.py  main.py  server.py
src/know_your_specimen/classification/: ore_classificatior.py
src/know_your_specimen/initialization/: initialization.py
src/know_your_specimen/report/: summary_report.py
src/know_your_specimen/segmentation/: image_mode_detector.py  intergrowth_segmentation.py  ore_classifier_model.pkl  talc_percentage.py  talc_percentage_new.py  talk_percentage.py
test/: test_main.py  test_server.py
