[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nornikel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "uvicorn>=0.34.0"
]

[project.scripts]
know-your-specimen = "know_your_specimen.main:main"

[dependency-groups]
test = ["pytest>=8.3.3", "httpx>=0.28.0"]
development = ["pytest>=8.3.3", "black>=24.8.0", "flake8>=7.1.1"]

[tool.setuptools.packages.find]
where = ["src"]
